thinwedge-rs/tui/src/bottom_pane/snapshots/thinwedge_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_handlers.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: "render_lines(&view, 112)"
---
                                                                                                                
  PreToolUse hooks                                                                                              
  Turn hooks on or off. Your changes are saved automatically.                                                   
                                                                                                                
  [x] Hook 1                                                                                                    
  [ ] Hook 2                                                                                                    
                                                                                                                
  Event     PreToolUse                                                                                          
  Matcher   Bash                                                                                                
  Source    Plugin - superpowers@openai-curated                                                                 
  Command   ${THINWEDGE_PLUGIN_ROOT}/hooks/pre-tool-use-check.sh                                                    
  Timeout   30s                                                                                                 
  Trust     Trusted                                                                                             
                                                                                                                
  Press space or enter to toggle; esc to go back
